syntax = "proto3";

package tracker;

option go_package = "internal/tracker/pb";

service TrackerService {
    rpc SendResourceRequest(ResourceRequest) returns (Empty);
}

message ResourceRequest{
    string FileHash = 1;
}

message Empty {}