syntax = "proto3";

package tracker;

option go_package = "proto/tracker/pb";

service TrackerService {
    rpc GetResourceHolders(GetResourceHoldersRequest) returns (GetResourceHoldersResponse);
    rpc RegisterResourceHolder(RegisterResourceHolderRequest) returns (Empty);
}

message GetResourceHoldersRequest{
    string FileHash = 1;
    repeated uint64 Need = 2;
}

message RegisterResourceHolderRequest{
    string FileHash = 1;
    repeated bool Status = 2;
    string Address = 3;
}

message GetResourceHoldersResponse{
    map<uint64,HolderRow> Holder = 1;
}
message HolderRow {
    repeated string Ips = 1;
}
message Empty {}